deployment/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: dev
  labels:
    app: test
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: ghcr.io/michaeljohannesmeier/testhtml
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: github-container-registry
