deployment/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
  namespace: dev
spec:
  selector:
    app: test
  ports:
    - port: 80
      targetPort: 80
