deployment/manifests/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ing
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jaaluu.com
      secretName: secret-jaaluu.com
  rules:
    - host: jaaluu.com
      http:
        paths:
          - path: /testhtml(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: test-svc
                port:
                  number: 80
